# ai-projects

./: .gitignore  .gitmodules  .travis.yml
flags/: CMakeLists.txt  README.md  README.txt
flags/cpp/: CMakeLists.txt  README.txt
flags/cpp/bind/: CMakeLists.txt
flags/cpp/bind/instance/: bind.cpp
flags/cpp/src/: CMakeLists.txt
flags/cpp/src/instance/: instance.cpp  instance.h  parser.cpp  parser.h
flags/cpp/tests/instance/: instance_test.cpp
flags/data/: analysis.ods
flags/py/: analysis.py  attr_select.py  decisionTree.py  decision_tree.py  knn.py  requirements.txt  tree.py  utils.py
flags/py/instance/: __init__.py
mlp/: CMakeLists.txt  README.md  README.txt
mlp/app/: CMakeLists.txt
mlp/app/reader/: CMakeLists.txt  README.txt  main.cpp
mlp/app/solver/: CMakeLists.txt  README.txt  main.cpp
mlp/cmake/: macros.cmake
mlp/data/: .gitignore  bks.txt
mlp/data/results/01/: report.xlsx
mlp/data/results/02/: report.xlsx
mlp/data/results/03/: report.xlsx
mlp/data/tests/: polygon10.tsp  polygon4.tsp  square.tsp
mlp/include/: CMakeLists.txt
mlp/include/argparser/: argparser.h
mlp/include/bks/: bks.h
mlp/include/bksparser/: bksparser.h
mlp/include/csv/: csv.h
mlp/include/iparser/: defines.h  ds.h  gammaset.h  instance.h  iparser.h
mlp/include/tspgen/: genetic.h  population.h
mlp/include/tspils/: ils.h  ls.h
mlp/include/tspsol/: solution.h
mlp/src/: CMakeLists.txt
mlp/src/argparser/: README.rst  README.txt  argparser.cpp
mlp/src/bks/: README.rst  bks.cpp
mlp/src/bksparser/: README.rst  bksparser.cpp
mlp/src/csv/: README.txt
mlp/src/iparser/: README.rst  gammaset.cpp  instance.cpp  iparser.cpp
mlp/src/tspgen/: CMakeLists.txt  README.txt  genetic.cpp  population.cpp
mlp/src/tspils/: CMakeLists.txt  README.rst  ils.cpp  ls.cpp
mlp/src/tspsol/: CMakeLists.txt  README.rst  solution.cpp
mlp/tests/: CMakeLists.txt
mlp/tests/argparser/: argparsertest.cpp
mlp/tests/csv/: csvtest.cpp
mlp/tests/iparser/: CMakeLists.txt  iparsertest.cpp
mlp/tests/tspsol/: tspsoltest.cpp
mlp/vis/: CMakeLists.txt
mlp/vis/app/tsp/: CMakeLists.txt  README.rst  main.cpp
mlp/vis/include/tsp/: iplot.h  plot.h  pplot.h  splot.h  tspw.h
mlp/vis/src/tsp/: CMakeLists.txt  README.txt  iplot.cpp  pplot.cpp  splot.cpp  tspw.cpp
mlp/vis/tsp2d/: CMakeLists.txt  README.rst  README.txt  main.cpp
